add and find products; save prices
